--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "bootstrap": "^5.3.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.0.0",
     "google-auth-library": "^9.4.1",
     "jsonwebtoken": "^9.0.2",
     "prettier": "^3.1.1",
