chore(deps): bump

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "sveltekit-auth-example",
 	"description": "SvelteKit Authentication Example",
-	"version": "2.0.6",
+	"version": "2.0.7",
 	"author": "Nate Stuyvesant",
 	"license": "https://github.com/nstuyvesant/sveltekit-auth-example/blob/master/LICENSE",
 	"repository": {
@@ -36,34 +36,36 @@
 	"type": "module",
 	"dependencies": {
 		"@sendgrid/mail": "^8.1.3",
-		"pg": "^8.11.5"
+		"pg": "^8.12.0"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^5.0.1",
-		"@sveltejs/kit": "^2.5.7",
-		"@sveltejs/vite-plugin-svelte": "^3.1.0",
+		"@eslint/js": "^9.9.0",
+		"@sveltejs/adapter-node": "^5.2.2",
+		"@sveltejs/kit": "^2.5.22",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/bootstrap": "5.2.10",
 		"@types/google.accounts": "^0.0.14",
 		"@types/jsonwebtoken": "^9.0.6",
-		"@types/pg": "^8.11.5",
-		"@typescript-eslint/eslint-plugin": "^7.7.1",
-		"@typescript-eslint/parser": "^7.7.1",
+		"@types/pg": "^8.11.6",
 		"bootstrap": "^5.3.3",
-		"eslint": "^9.1.1",
+		"eslint": "^9.9.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.38.0",
-		"google-auth-library": "^9.9.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-svelte": "^2.43.0",
+		"globals": "^15.9.0",
+		"google-auth-library": "^9.13.0",
 		"jsonwebtoken": "^9.0.2",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.3",
-		"sass": "^1.75.0",
-		"svelte": "^4.2.15",
-		"svelte-check": "^3.7.0",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.10",
-		"vitest": "^1.5.2"
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.6",
+		"sass": "^1.77.8",
+		"svelte": "^4.2.18",
+		"svelte-check": "^3.8.5",
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.4",
+		"typescript-eslint": "^8.1.0",
+		"vite": "^5.4.1",
+		"vitest": "^2.0.5"
 	},
-	"packageManager": "yarn@4.1.1",
+	"packageManager": "yarn@4.4.0",
 	"prettier": "./prettier.config.mjs"
 }
