--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 .DS_Store
 node_modules
-/build
-/.svelte-kit
-/package
+build
+.svelte-kit
 .env
-.env.*
 !.env.example
-.vercel
-.output
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-/.yarn/install-state.gz
+.yarn/install-state.gz
