--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "sveltekit-auth-example",
 	"description": "SvelteKit Authentication Example",
-	"version": "5.0.3",
+	"version": "5.0.4",
 	"author": "Nate Stuyvesant",
 	"license": "https://github.com/nstuyvesant/sveltekit-auth-example/blob/master/LICENSE",
 	"repository": {
@@ -21,51 +21,52 @@
 	],
 	"scripts": {
 		"start": "node build",
-		"dev": "vite dev",
+		"prepare": "svelte-kit sync",
+		"dev": "vite",
 		"build": "vite build",
 		"package": "svelte-kit package",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint . --ignore-path ./.eslintignore",
-		"format": "prettier --write . --ignore-path ./.eslintignore"
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"engines": {
-		"node": "^20.18.0"
+		"node": "^22.18.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sendgrid/mail": "^8.1.4",
-		"pg": "^8.14.1"
+		"@sendgrid/mail": "^8.1.5",
+		"pg": "^8.16.3"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.23.0",
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.20.4",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@eslint/js": "^9.32.0",
+		"@sveltejs/adapter-node": "^5.2.13",
+		"@sveltejs/kit": "^2.27.0",
+		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@types/bootstrap": "5.2.10",
-		"@types/google.accounts": "^0.0.15",
-		"@types/jsonwebtoken": "^9.0.9",
-		"@types/pg": "^8.11.11",
-		"bootstrap": "^5.3.4",
-		"eslint": "^9.23.0",
-		"eslint-config-prettier": "^10.1.1",
-		"eslint-plugin-prettier": "^5.2.6",
-		"eslint-plugin-svelte": "^3.5.1",
-		"globals": "^16.0.0",
-		"google-auth-library": "^9.15.1",
+		"@types/google.accounts": "^0.0.17",
+		"@types/jsonwebtoken": "^9.0.10",
+		"@types/pg": "^8.15.5",
+		"bootstrap": "^5.3.7",
+		"eslint": "^9.32.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-prettier": "^5.5.3",
+		"eslint-plugin-svelte": "^3.11.0",
+		"globals": "^16.3.0",
+		"google-auth-library": "^10.2.0",
 		"jsonwebtoken": "^9.0.2",
-		"prettier": "^3.5.3",
-		"prettier-plugin-svelte": "^3.3.3",
-		"sass": "^1.86.3",
-		"svelte": "^5.25.6",
-		"svelte-check": "^4.1.5",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"sass": "^1.89.2",
+		"svelte": "^5.37.2",
+		"svelte-check": "^4.3.0",
 		"tslib": "^2.8.1",
-		"typescript": "^5.8.2",
-		"typescript-eslint": "^8.29.0",
-		"vite": "^6.2.5",
-		"vitest": "^3.1.1"
+		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.38.0",
+		"vite": "^7.0.6",
+		"vitest": "^3.2.4"
 	},
-	"packageManager": "yarn@4.8.1",
+	"packageManager": "yarn@4.9.2",
 	"prettier": "./prettier.config.mjs"
 }
